# millicall

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  install.sh  millicallctl  mise.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: _build-images.yml  ci.yml  release-dev.yml  release-stable.yml  wiki-sync.yml
.superpowers/sdd/: p4a-task2-report.md  p4a-task4-report.md
alembic/: env.py
alembic/versions/: 0001_app_settings.py  0002_users.py  0003_extensions.py  0004_trunks.py  0005_routes.py  0006_cdr.py  0007_contacts.py  0008_providers.py  0009_ai_agents.py  0010_call_messages.py  0011_workflows.py  0012_network_config.py  0013_devices.py  0014_auth_hardening.py  0015_totp.py  0016_auth_throttle.py  0017_users_email_unique.py  (+6 more)
deploy/: docker-compose.prod.yml
docker/: Dockerfile  freeswitch-entrypoint.sh  netd-entrypoint.sh  reload-dnsmasq.sh
docs/: RUNBOOK-phase3-ai.md  RUNBOOK-phase4a-mcp.md  RUNBOOK-phase4b-workflow.md  RUNBOOK-phase5-netd.md  RUNBOOK-phase6-auth.md  cloudflare.md  hgw-flets.md  index.md  mcp.md  network.md  ntt-spec.md  providers.md  quickstart.md  security-model.md  sip-trunk.md  sso.md  tailscale.md  troubleshooting.md  workflows.md
frontend/: .gitignore  index.html  package-lock.json  package.json  panda.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.config.ts
runbooks/: 2026-07-05-phase2-trunks-routing.md  RUNBOOK-phase3-ai.md  RUNBOOK-phase4b-workflow.md  RUNBOOK-phase5-netd.md  phase1-zoiper-internal-call.md
scripts/: gen-openapi.py
spike/: .env.example  .gitignore  RUNBOOK.md  docker-compose.yml
tests/: conftest.py  test_ai_agents_api.py  test_ai_provider_ssrf.py  test_app_settings_api.py  test_app_settings_integration.py  test_app_settings_service.py  test_audio_fork_handler.py  test_audio_util.py  test_audit.py  test_auth.py  test_call_control.py  test_call_messages_api.py  test_calling_permission_api.py  test_calling_permission_dialplan.py  test_calls.py  test_cdr_api.py  test_change_hook.py  test_change_hook_child_lan.py  test_change_hook_internal_rebind.py  test_change_hook_number_plan.py  test_change_hook_routes.py  test_change_hook_trunks.py  test_config.py  test_contacts.py  test_conversation.py  test_crypto.py  test_csrf.py  test_db.py  test_devices_api.py  test_dialplan_ai_agent.py  test_dialplan_inbound.py  test_dialplan_outbound.py  test_dtmf_collector.py  test_end_talk.py  test_esl.py  test_esl_phase2.py  test_event_listener.py  test_extensions.py  test_fsconfig.py  test_fsconfig_child_lan.py  (+73 more)
(+224 files in other folders)
