[project]
name = "millicall"
version = "0.1.0"
description = "millicall v2 - フレッツ特化ローカルPBX (core)"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "pydantic-settings>=2.5",
    "argon2-cffi>=23.1",
    "itsdangerous>=2.2",
    "jinja2>=3.1",
    "cryptography>=43",
    "audioop-lts>=0.2; python_version >= '3.13'",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "defusedxml>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/millicall"]

[tool.hatch.build.targets.wheel.force-include]
"src/millicall/telephony/templates" = "millicall/telephony/templates"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["millicall"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
